--- a/doc/package.css
+++ b/doc/package.css
@@ -1,6 +1,3 @@
-@import "doxygen.css";
-@import "tabs.css";
-
 body {
     font-family: 'Lucida Grande','Lucida Sans Unicode',Verdana,Sans-Serif;
     color: #5D5D5D;
@@ -8,7 +5,7 @@ body {
 
 dl {
     border: 1.5px #82b6d7 solid;
-    width: 97%;
+  width: 97%;
     padding: 5px;
     color: #330077;
 }
@@ -59,6 +56,7 @@ a:visited {
     text-decoration: none;
 }
 
+
 DIV.memitem
 { 
   spacing: 10px;
@@ -91,6 +89,8 @@ DIV.memdoc
   font-size:100%;
   line-height:normal;
 }
+
+/* tabs styles, based on http://www.alistapart.com/articles/slidingdoors */
 
 DIV.tabs
 {
@@ -163,9 +163,9 @@ DIV.tabs TD
    text-decoration  : none;
 }
 
-
-
+/* Commented Backslash Hack hides rule from IE5-Mac \*/
 DIV.tabs SPAN {float : none;}
+/* End IE5-Mac hack */
 
 DIV.tabs A:hover SPAN
 {
@@ -230,4 +230,5 @@ DIV.groupHeader
     text-decoration: none;
     color:#0066CC
 }
+
 
